# youtube-transcriber

./: .env.example  .gitignore  CLAUDE.md  README.en.md  README.md  plan.md  pyproject.toml  【小川哲×阿部幸大】「生きること」と「文章を書くこと」は、どう関わるのか？ 直木賞作家と気鋭の人文学研究者が語った「文章」の秘密-_2EGB8.md  【小川哲×阿部幸大】言語化と「生き方」の深い関係 ベストセラー作家と気鋭の研究者の対話-CmjkHs.md
plan/: 2026-04-20-x-twitter-and-local-files.md
src/transcriber/: __init__.py  __main__.py  captions.py  cli.py  language.py  markdown_writer.py  run_report.py  translate_file.py  translator.py  types.py  url_parser.py  whisper_transcribe.py  youtube_client.py
tests/: test_language.py  test_markdown_writer.py  test_run_report.py  test_translate_file.py  test_url_parser.py
