[project]
name = "youtube-transcriber"
version = "0.1.0"
description = "YouTube 動画/プレイリストの文字起こしと日本語翻訳を行う CLI ツール"
requires-python = ">=3.11"
dependencies = [
    "youtube-transcript-api>=0.6.2",
    "yt-dlp>=2024.8.6",
    "faster-whisper>=1.0.3",
    "deepl>=1.18.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
youtube-transcriber = "transcriber.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcriber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
